step2/k8s-manifest/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: acme-test2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: acme-test2
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: utrace/navicons-dice-demo-frontend:2.0.0
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            memory: "64Mi"
          limits:
            memory: "128Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: acme-test2
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: utrace/navicons-dice-demo-backend:1.0.0
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /backend/health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /backend/health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            memory: "64Mi"
          limits:
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: acme-test2
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: acme-test2
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dice-roll
  namespace: acme-test2
spec:
  ingressClassName: nginx
  rules:
  - host: "app2.demo.acme"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
